[package]
name = "sel4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2.1"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
buddy_system_allocator = "0.6"
riscv = { git = "https://gitee.com/rcore-os/riscv", features = ["inline-asm"] }
log = "0.4"
xmas-elf = "0.7.0"
[build-dependencies]
cc = "1.0"
